tests/NormalTests/paczka1/small_fuzzy/48008866.err
Error in line 2: g8VkRp A873 97,0
Error in line 3: VP7If0x6R A873 38,7
